<resources>
    <string name="app_name">WcnTools</string>

    <!-- Main activity -->
    <string name="main_tab_wifi">WiFi</string>
    <string name="main_tab_bt">BT</string>
    <string name="main_tab_lbs">LBS</string>
    <string name="main_tab_nfc">NFC</string>
    <string name="main_tab_uwb">UWB</string>

    <string name="main_to_lm">LocationManager</string>
    <string name="main_to_geocode">Geocoder</string>

    <string name="lm_print_simple_method">printSimpleMethod</string>
    <string name="lm_remove_all">Remove All Request</string>
    <string name="lm_request_updates_gnss_1">Request Location GNSS1 1s</string>
    <string name="lm_request_updates_gnss_2">Request Location GNSS2 2s</string>
    <string name="lm_request_updates_gnss_3">Request Location GNSS3 3s</string>
    <string name="lm_request_updates_gnss_4">Request Location GNSS4 4s</string>
    <string name="lm_request_updates_gnss_5">Request Location GNSS5 5s</string>
    <string name="lm_request_updates_network_1">Request Location NETWORK1 1s</string>
    <string name="lm_request_updates_network_2">Request Location NETWORK2 30s</string>
    <string name="lm_request_updates_network_3">Request Location NETWORK3 40s</string>
    <string name="lm_request_updates_network_4">Request Location NETWORK4 50s</string>
    <string name="lm_request_updates_passive">Request Location PASSIVE</string>
    <string name="lm_request_updates_fused">Request Location FUSED</string>
    <string name="lm_request_updates_mock">Request Location MOCK</string>
    <string name="lm_send_extra_command">Send extra Command</string>
    <string name="lm_add_nmea_listener">addNmeaListener</string>
    <string name="lm_register_gnss_status_cb">registerGnssStatusCallback</string>
    <string name="lm_register_gnss_navigation_message_cb">registerGnssNavigationMessageCallback</string>
    <string name="lm_register_gnss_measurement_event_cb">registerGnssMeasurementsCallback</string>
    <string name="lm_add_proximity_alert">AddProximityAlert</string>
    <string name="lm_remove_proximity_alert">RemoveProximityAlert</string>
    <string name="lm_add_test_provider">AddTestProvider</string>
    <string name="lm_remove_test_provider">RemoveTestProvider</string>
    <string name="lm_set_test_provider_location">SetTestProviderLocation</string>
</resources>
